# MMI

./: .gitignore  DiscreteCondEnt.py  Libraries.ipynb  Libraries.py  MINE.ipynb  MINE.py  MMI.ipynb  README.md  main.ipynb  main.py  main_v2.ipynb  pytorchtools.py  settings.py  utils.py
MMI/: MMI_config.py  mmi.py
MMI/IC/: CMakeCache.txt  Makefile  __init__.py  test.py
MMI/IC/src/: AIC.hpp  CMakeLists.txt  SF.hpp  pylib.cpp
Output/2019-04-12 10:38:24.258872/: MMI_mine.txt
Output/2019-04-12 10:38:24.258872/n_var=3/: mine_Cond_Ent.txt  mine_EntropyTable.txt  mine_psp_clusters.txt  mine_psp_gamma.txt
Output/2019-04-12 10:38:24.258872/n_var=4/: mine_Cond_Ent.txt  mine_EntropyTable.txt  mine_psp_clusters.txt  mine_psp_gamma.txt
Output/2019-04-12 10:38:24.258872/n_var=5/: mine_Cond_Ent.txt  mine_EntropyTable.txt  mine_psp_clusters.txt  mine_psp_gamma.txt
Output/2019-04-12 12:39:57.859618/: MMI_LinReg.txt  MMI_mine.txt
Output/2019-04-12 13:08:30.576020/: MMI_LinReg.txt  MMI_mine.txt
data/: __init__.py  bimodal.py  gaussian.py  uniform.py  uniform_mmi.py  utils.py
examples/: ex_MMI_20190415.py  test.py  testMMI.py
model/: DiscreteCondEnt.py  ShannonKDE.py  __init__.py  cart_regression.py  chiSqDiv.py  condShannonEntropy.py  gaussianEntropy.py  hellingerDiv.py  jackknife.py  klDiv.py  kraskov.py  linear_regression.py  logistic_regression.py  mine.py  mine_entropy.py  mine_multitask.py  pytorchtools.py  renyiDiv.py  tsallisDiv.py
model/ifestimators/: Test.py  __init__.py
model/ifestimators/demos/: demo5.m
util/: plot_util.py  torch_util.py
(+177 files in other folders)
